New dataset created, NPY files saved

--- a/frameExtracter.ipynb
+++ b/frameExtracter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +133,231 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Plan F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_sizes_raw = [\n",
+    "    288,      #barred_area\n",
+    "    320,      #cross_walk\n",
+    "    384,      #go_straight\n",
+    "    384,      #no_passing_zone_beginning\n",
+    "    480,      #parking_zone\n",
+    "    384,      #priority_over\n",
+    "    512,      #steep_hill_downhill\n",
+    "    544,      #steep_hill_uphill\n",
+    "    512,      #stop\n",
+    "    448,      #tunnel_beginning\n",
+    "    416,      #turn_left\n",
+    "    416,      #turn_right\n",
+    "] \n",
+    "\n",
+    "crop_sizes_field = [\n",
+    "    128,      #barred_area\n",
+    "    128,      #cross_walk\n",
+    "    128,      #go_straight\n",
+    "    128,      #no_passing_zone_beginning\n",
+    "    128,      #parking_zone\n",
+    "    128,      #priority_over\n",
+    "    128,      #steep_hill_downhill\n",
+    "    128,      #steep_hill_uphill\n",
+    "    128,      #stop\n",
+    "    128,      #tunnel_beginning\n",
+    "    128,      #turn_left\n",
+    "    128,      #turn_right\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SIZE = 416\n",
+    "\n",
+    "center_selected = False\n",
+    "center_x, center_y = 0, 0\n",
+    "abort_task = False\n",
+    "WINDOW_SCALE = 0.5\n",
+    "move_step = 1\n",
+    "move_directions = {'w': (0, -1), 'a': (-1, 0), 's': (0, 1), 'd': (1, 0)}\n",
+    "\n",
+    "def select_center(event, x, y, flags, param):\n",
+    "    global center_selected, center_x, center_y\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        center_x = int(x / WINDOW_SCALE)\n",
+    "        center_y = int(y / WINDOW_SCALE)\n",
+    "        center_selected = True\n",
+    "\n",
+    "def calculate_crop_bounds(img, center, size=SIZE):\n",
+    "    h, w = img.shape[:2]\n",
+    "    half_size = size // 2\n",
+    "    \n",
+    "    y1 = max(0, center[1] - half_size)\n",
+    "    y2 = min(h, center[1] + half_size)\n",
+    "    x1 = max(0, center[0] - half_size)\n",
+    "    x2 = min(w, center[0] + half_size)\n",
+    "\n",
+    "    if y2 - y1 < size:\n",
+    "        if y1 == 0: y2 = size\n",
+    "        else: y1 = h - size\n",
+    "    if x2 - x1 < size:\n",
+    "        if x1 == 0: x2 = size\n",
+    "        else: x1 = w - size\n",
+    "    \n",
+    "    return x1, y1, x2, y2\n",
+    "\n",
+    "def crop_around_center(img, center, size=SIZE):\n",
+    "    x1, y1, x2, y2 = calculate_crop_bounds(img, center, size)\n",
+    "    return img[y1:y2, x1:x2], (x1, y1, x2, y2)\n",
+    "\n",
+    "def process_images(input_folder, output_folder):\n",
+    "    global abort_task\n",
+    "    \n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    valid_ext = ('.jpg', '.jpeg', '.png')\n",
+    "    images = [f for f in os.listdir(input_folder) if f.lower().endswith(valid_ext)]\n",
+    "    \n",
+    "    for filename in images:\n",
+    "        global center_selected, center_x, center_y\n",
+    "        center_selected = False\n",
+    "        center_x, center_y = 0, 0\n",
+    "        \n",
+    "        if abort_task:\n",
+    "            print(\"Task aborted by user!\")\n",
+    "            return\n",
+    "        \n",
+    "        img_path = os.path.join(input_folder, filename)\n",
+    "        img = cv2.imread(img_path, cv2.IMREAD_UNCHANGED)\n",
+    "        if img is None:\n",
+    "            continue\n",
+    "        \n",
+    "        original_channels = img.shape[2] if len(img.shape) > 2 else 1\n",
+    "        has_alpha = original_channels == 4\n",
+    "            \n",
+    "        cv2.namedWindow('Select Center', cv2.WINDOW_NORMAL)\n",
+    "        cv2.resizeWindow('Select Center', \n",
+    "                        int(img.shape[1] * WINDOW_SCALE),       # type: ignore\n",
+    "                        int(img.shape[0] * WINDOW_SCALE))      # type: ignore\n",
+    "        cv2.setMouseCallback('Select Center', select_center)\n",
+    "        \n",
+    "        display_img = cv2.resize(img.copy(), None, fx=WINDOW_SCALE, fy=WINDOW_SCALE)\n",
+    "        h_display, w_display = display_img.shape[:2]\n",
+    "        \n",
+    "        instructions = [\n",
+    "            \"LEFT CLICK: Select center\",\n",
+    "            \"SPACE: Confirm crop\",\n",
+    "            \"Q: Skip image\",\n",
+    "            \"ESC: Abort all\"\n",
+    "        ]\n",
+    "        for i, text in enumerate(instructions):\n",
+    "            cv2.putText(display_img, text, (10, 30 + i*30), \n",
+    "                       cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "\n",
+    "        while True:\n",
+    "            current_display = display_img.copy()\n",
+    "            key = cv2.waitKey(1) & 0xFF\n",
+    "            \n",
+    "            if center_selected and key in (ord('w'), ord('a'), ord('s'), ord('d')):\n",
+    "                dx, dy = move_directions[chr(key)]\n",
+    "                center_x = max(0, min(img.shape[1]-1, center_x + dx * move_step)) # type: ignore\n",
+    "                center_y = max(0, min(img.shape[0]-1, center_y + dy * move_step)) # type: ignore\n",
+    "                # print(f\"Center moved to: ({center_x}, {center_y})\")\n",
+    "            \n",
+    "            if center_selected:\n",
+    "                _, (x1, y1, x2, y2) = crop_around_center(img, (center_x, center_y))\n",
+    "                \n",
+    "                cv2.rectangle(current_display,\n",
+    "                            (int(x1 * WINDOW_SCALE), int(y1 * WINDOW_SCALE)),\n",
+    "                            (int(x2 * WINDOW_SCALE), int(y2 * WINDOW_SCALE)),\n",
+    "                            (0, 0, 255), 2)\n",
+    "                \n",
+    "                cv2.drawMarker(current_display,\n",
+    "                              (int(center_x * WINDOW_SCALE), int(center_y * WINDOW_SCALE)),\n",
+    "                              (0, 255, 0), cv2.MARKER_CROSS, 20, 2)\n",
+    "                \n",
+    "                # coord_text = f\"({center_x}, {center_y})\"\n",
+    "                # cv2.putText(current_display, coord_text,\n",
+    "                #           (int(center_x * WINDOW_SCALE) + 15, \n",
+    "                #           int(center_y * WINDOW_SCALE) - 15),\n",
+    "                #           cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2)\n",
+    "\n",
+    "            cv2.putText(current_display, \"WASD: Fine-tune position\", \n",
+    "                       (10, h_display - 30), cv2.FONT_HERSHEY_SIMPLEX, \n",
+    "                       0.5, (0, 255, 255), 1)\n",
+    "            \n",
+    "            cv2.imshow('Select Center', current_display)\n",
+    "            \n",
+    "            if key == ord(' '):\n",
+    "                break\n",
+    "            elif key == ord('q'):\n",
+    "                cv2.destroyAllWindows()\n",
+    "                print(f\"Skipped {filename}\")\n",
+    "                break\n",
+    "            elif key == 27:\n",
+    "                abort_task = True\n",
+    "                cv2.destroyAllWindows()\n",
+    "                print(\"Aborting task...\")\n",
+    "                return\n",
+    "\n",
+    "        if abort_task:\n",
+    "            return\n",
+    "            \n",
+    "        if key == ord('q'):\n",
+    "            continue\n",
+    "            \n",
+    "        cropped, _ = crop_around_center(img, (center_x, center_y))\n",
+    "        \n",
+    "        if has_alpha and cropped.shape[2] != 4:\n",
+    "            raise ValueError(\"Alpha channel lost during cropping!\")\n",
+    "\n",
+    "        if cropped.dtype != img.dtype:\n",
+    "            raise TypeError(f\"Data type changed from {img.dtype} to {cropped.dtype}\")\n",
+    "\n",
+    "        if cropped.shape[:2] != (SIZE, SIZE):\n",
+    "            print(f\"Warning: Cropped size {cropped.shape} != {SIZE}x{SIZE}\")\n",
+    "        \n",
+    "        output_path = os.path.join(output_folder, filename)\n",
+    "        if filename.lower().endswith('.png'):\n",
+    "            cv2.imwrite(output_path, cropped, [\n",
+    "                cv2.IMWRITE_PNG_COMPRESSION, 0,\n",
+    "                cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_DEFAULT\n",
+    "            ])\n",
+    "        else:\n",
+    "            cv2.imwrite(output_path, cropped, [cv2.IMWRITE_JPEG_QUALITY, 100])\n",
+    "        \n",
+    "        print(f\"Processed {filename} | Original: {os.path.getsize(img_path)//1024}KB -> Cropped: {os.path.getsize(output_path)//1024}KB\")\n",
+    "        cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_folder = r'DatasetTest/Original'\n",
+    "output_folder = r'DatasetTest/Cropped'\n",
+    "\n",
+    "process_images(input_folder, output_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Renaming the Frames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,38 +370,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Moving 'barred_area' files: 100%|██████████| 626/626 [00:00<00:00, 724.26file/s]\n",
-      "Renaming 'barred_area': 100%|██████████| 626/626 [00:00<00:00, 1638.75file/s]\n",
-      "Moving 'cross_walk' files: 100%|██████████| 599/599 [00:00<00:00, 1360.83file/s]\n",
-      "Renaming 'cross_walk': 100%|██████████| 599/599 [00:00<00:00, 1374.33file/s]\n",
-      "Moving 'go_straight' files: 100%|██████████| 509/509 [00:00<00:00, 1786.71file/s]\n",
-      "Renaming 'go_straight': 100%|██████████| 509/509 [00:00<00:00, 1175.27file/s]\n",
-      "Moving 'no_passing_zone_beginning' files: 100%|██████████| 575/575 [00:00<00:00, 1816.98file/s]\n",
-      "Renaming 'no_passing_zone_beginning': 100%|██████████| 575/575 [00:00<00:00, 1173.84file/s]\n",
-      "Moving 'parking_zone' files: 100%|██████████| 503/503 [00:00<00:00, 1494.87file/s]\n",
-      "Renaming 'parking_zone': 100%|██████████| 503/503 [00:00<00:00, 1498.08file/s]\n",
-      "Moving 'priority_over' files: 100%|██████████| 591/591 [00:00<00:00, 1418.95file/s]\n",
-      "Renaming 'priority_over': 100%|██████████| 591/591 [00:00<00:00, 1682.17file/s]\n",
-      "Moving 'steep_hill_downhill' files: 100%|██████████| 453/453 [00:00<00:00, 1183.52file/s]\n",
-      "Renaming 'steep_hill_downhill': 100%|██████████| 453/453 [00:00<00:00, 1696.26file/s]\n",
-      "Moving 'steep_hill_uphill' files: 100%|██████████| 505/505 [00:00<00:00, 1378.34file/s]\n",
-      "Renaming 'steep_hill_uphill': 100%|██████████| 505/505 [00:00<00:00, 1451.96file/s]\n",
-      "Moving 'stop' files: 100%|██████████| 568/568 [00:00<00:00, 643.01file/s]\n",
-      "Renaming 'stop': 100%|██████████| 568/568 [00:00<00:00, 1145.53file/s]\n",
-      "Moving 'tunnel_beginning' files: 100%|██████████| 619/619 [00:00<00:00, 1524.59file/s]\n",
-      "Renaming 'tunnel_beginning': 100%|██████████| 619/619 [00:00<00:00, 1561.49file/s]\n",
-      "Moving 'turn_left' files: 100%|██████████| 598/598 [00:00<00:00, 1556.70file/s]\n",
-      "Renaming 'turn_left': 100%|██████████| 598/598 [00:00<00:00, 1053.18file/s]\n",
-      "Moving 'turn_right' files: 100%|██████████| 573/573 [00:00<00:00, 1077.90file/s]\n",
-      "Renaming 'turn_right': 100%|██████████| 573/573 [00:00<00:00, 1039.58file/s]\n",
-      "Processing folders: 100%|██████████| 12/12 [00:10<00:00,  1.11folder/s]"
+      "Moving 'barred_area' files: 100%|██████████| 617/617 [00:00<00:00, 1436.41file/s]\n",
+      "Renaming 'barred_area': 100%|██████████| 617/617 [00:00<00:00, 2837.73file/s]\n",
+      "Moving 'cross_walk' files: 100%|██████████| 581/581 [00:00<00:00, 2421.51file/s]\n",
+      "Renaming 'cross_walk': 100%|██████████| 581/581 [00:00<00:00, 2216.00file/s]\n",
+      "Moving 'go_straight' files: 100%|██████████| 497/497 [00:00<00:00, 1811.79file/s]\n",
+      "Renaming 'go_straight': 100%|██████████| 497/497 [00:00<00:00, 1647.50file/s]\n",
+      "Moving 'no_passing_zone_beginning' files: 100%|██████████| 565/565 [00:00<00:00, 1079.47file/s]\n",
+      "Renaming 'no_passing_zone_beginning': 100%|██████████| 565/565 [00:00<00:00, 1179.46file/s]\n",
+      "Moving 'parking_zone' files: 100%|██████████| 483/483 [00:00<00:00, 2123.44file/s]\n",
+      "Renaming 'parking_zone': 100%|██████████| 483/483 [00:00<00:00, 1962.30file/s]\n",
+      "Moving 'priority_over' files: 100%|██████████| 576/576 [00:00<00:00, 1265.00file/s]\n",
+      "Renaming 'priority_over': 100%|██████████| 576/576 [00:00<00:00, 2157.86file/s]\n",
+      "Moving 'steep_hill_downhill' files: 100%|██████████| 427/427 [00:00<00:00, 1934.31file/s]\n",
+      "Renaming 'steep_hill_downhill': 100%|██████████| 427/427 [00:00<00:00, 1729.68file/s]\n",
+      "Moving 'steep_hill_uphill' files: 100%|██████████| 479/479 [00:00<00:00, 2065.50file/s]\n",
+      "Renaming 'steep_hill_uphill': 100%|██████████| 479/479 [00:00<00:00, 1129.76file/s]\n",
+      "Moving 'stop' files: 100%|██████████| 546/546 [00:00<00:00, 1161.38file/s]\n",
+      "Renaming 'stop': 100%|██████████| 546/546 [00:00<00:00, 1038.08file/s]\n",
+      "Moving 'tunnel_beginning' files: 100%|██████████| 602/602 [00:00<00:00, 1332.88file/s]\n",
+      "Renaming 'tunnel_beginning': 100%|██████████| 602/602 [00:00<00:00, 1999.34file/s]\n",
+      "Moving 'turn_left' files: 100%|██████████| 580/580 [00:00<00:00, 1319.67file/s]\n",
+      "Renaming 'turn_left': 100%|██████████| 580/580 [00:00<00:00, 1346.26file/s]\n",
+      "Moving 'turn_right' files: 100%|██████████| 555/555 [00:00<00:00, 1134.04file/s]\n",
+      "Renaming 'turn_right': 100%|██████████| 555/555 [00:00<00:00, 1030.73file/s]\n",
+      "Class Folders: 12class [00:08,  1.36class/s]"
      ]
     },
     {
@@ -201,7 +420,12 @@
     }
    ],
    "source": [
-    "for folder in tqdm(os.listdir(base_dir), desc=\"Processing folders\", unit=\"folder\"):\n",
+    "sorted_folders = sorted(\n",
+    "    [f for f in os.listdir(base_dir) if os.path.isdir(os.path.join(base_dir, f))],\n",
+    "    key=natural_sort_key\n",
+    ")\n",
+    "\n",
+    "for class_idx, folder in tqdm(enumerate(sorted_folders), desc=\"Class Folders\", unit=\"class\"):\n",
     "    folder_path = os.path.join(base_dir, folder)\n",
     "    \n",
     "    if not os.path.isdir(folder_path):\n",
@@ -209,7 +433,7 @@
     "\n",
     "    img_files = [f for f in os.listdir(folder_path) \n",
     "                if f.lower().endswith(('.jpg', '.jpeg', '.png'))\n",
-    "                and not re.match(r'^frame_\\d{4}\\..+$', f)]\n",
+    "                and not re.match(r'^frame_\\d{5}\\..+$', f)]\n",
     "    \n",
     "    if not img_files:\n",
     "        continue\n",
@@ -218,19 +442,27 @@
     "    temp_dir = os.path.join(folder_path, \"temp_renumber\")\n",
     "    os.makedirs(temp_dir, exist_ok=True)\n",
     "\n",
-    "    for filename in tqdm(img_files, desc=f\"Moving '{folder}' files\", unit=\"file\"):\n",
-    "        src = os.path.join(folder_path, filename)\n",
-    "        dst = os.path.join(temp_dir, filename)\n",
-    "        os.rename(src, dst)\n",
+    "    try:\n",
+    "        for filename in tqdm(img_files, desc=f\"Moving '{folder}' files\", unit=\"file\"):\n",
+    "            os.rename(\n",
+    "                os.path.join(folder_path, filename),\n",
+    "                os.path.join(temp_dir, filename)\n",
+    "            )\n",
     "\n",
-    "    temp_files = sorted(os.listdir(temp_dir), key=natural_sort_key)\n",
-    "    for idx, filename in enumerate(tqdm(temp_files, desc=f\"Renaming '{folder}'\", unit=\"file\"), 1):\n",
-    "        ext = os.path.splitext(filename)[1].lower()\n",
-    "        new_name = f\"frame_{idx:04d}{ext}\"\n",
-    "        os.rename(os.path.join(temp_dir, filename),\n",
-    "                 os.path.join(folder_path, new_name))\n",
-    "\n",
-    "    os.rmdir(temp_dir)\n",
+    "        temp_files = sorted(os.listdir(temp_dir), key=natural_sort_key)\n",
+    "        for frame_idx, filename in enumerate(tqdm(temp_files, desc=f\"Renaming '{folder}'\", unit=\"file\"), 1):\n",
+    "            ext = os.path.splitext(filename)[1].lower()\n",
+    "            new_name = f\"{class_idx:02d}_frame_{frame_idx:05d}{ext}\"\n",
+    "            os.rename(\n",
+    "                os.path.join(temp_dir, filename),\n",
+    "                os.path.join(folder_path, new_name)\n",
+    "            )\n",
+    "    finally:\n",
+    "         if os.path.exists(temp_dir):\n",
+    "            try:\n",
+    "                os.rmdir(temp_dir)\n",
+    "            except OSError as e:\n",
+    "                print(f\"Could not delete '{temp_dir}', {e.strerror}\")\n",
     "\n",
     "print(\"Done!\")"
    ]
@@ -245,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cuda_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
