--- a/TrafficSignTest.ipynb
+++ b/TrafficSignTest.ipynb
@@ -14,8 +14,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from albumentations.pytorch import ToTensorV2\n",
-    "from torchvision import transforms"
+    "from albumentations.pytorch import ToTensorV2"
    ]
   },
   {
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,40 +37,38 @@
     "    def __init__(self, num_classes=12):\n",
     "        super(TrafficSignCNN, self).__init__()\n",
     "        \n",
-    "       # First convolutional block\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=32, kernel_size=5, padding=2)\n",
     "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=32, kernel_size=5, padding=2)\n",
     "        self.pool1 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.dropout1 = nn.Dropout(0.25)\n",
-    "        # Second convolutional block\n",
+    "        \n",
     "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, padding=1)\n",
     "        self.conv4 = nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, padding=1)\n",
     "        self.pool2 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.dropout2 = nn.Dropout(0.25)\n",
-    "        # Dense layers\n",
-    "        # If input images are 32x32, after two poolings (factor of 4 reduction), spatial size becomes 8x8.\n",
+    "        \n",
     "        self.flatten_dim = 64 * 8 * 8\n",
     "        self.fc1 = nn.Linear(self.flatten_dim, 256)\n",
     "        self.dropout3 = nn.Dropout(0.5)\n",
     "        self.fc2 = nn.Linear(256, num_classes)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        # First block\n",
     "        x = F.relu(self.conv1(x))\n",
     "        x = F.relu(self.conv2(x))\n",
     "        x = self.pool1(x)\n",
     "        x = self.dropout1(x)\n",
-    "        # Second block\n",
+    "        \n",
     "        x = F.relu(self.conv3(x))\n",
     "        x = F.relu(self.conv4(x))\n",
     "        x = self.pool2(x)\n",
     "        x = self.dropout2(x)\n",
-    "        # Flatten\n",
+    "        \n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout3(x)\n",
-    "        x = self.fc2(x)\n",
-    "        return x"
+    "        logits = self.fc2(x)\n",
+    "        \n",
+    "        return F.softmax(logits, dim=1)"
    ]
   },
   {
@@ -153,20 +150,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def live_test_image(model_path, test_path):\n",
-    "    # Load model on the appropriate device\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    model = TrafficSignCNN(num_classes=12).to(device)\n",
-    "    # Remove unsupported arguments: weights_only, mmap\n",
+    "    \n",
     "    model.load_state_dict(torch.load(model_path, map_location=device))\n",
     "    model.eval()\n",
     "    \n",
-    "    # Define the transformation pipeline using Albumentations\n",
     "    transform_simple = A.Compose(\n",
     "        [\n",
     "            A.Resize(32, 32),\n",
@@ -176,7 +178,6 @@
     "        p=1\n",
     "    )\n",
     "    \n",
-    "    # Define class names\n",
     "    class_names = [\n",
     "        'barred_area',\n",
     "        'cross_walk',\n",
@@ -192,7 +193,6 @@
     "        'turn_right'\n",
     "    ]\n",
     "    \n",
-    "    # Get image paths from test_path (either directory or a single file)\n",
     "    if os.path.isdir(test_path):\n",
     "        image_paths = [os.path.join(test_path, f) for f in os.listdir(test_path) \n",
     "                       if f.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
@@ -212,14 +212,12 @@
     "            print(f\"Could not read {img_path}\")\n",
     "            continue\n",
     "            \n",
-    "        # Convert image from BGR to RGB\n",
     "        rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        transformed = transform_simple(image=rgb)\n",
     "        input_tensor = transformed[\"image\"].unsqueeze(0).to(device)\n",
     "        \n",
     "        with torch.no_grad():\n",
-    "            outputs = model(input_tensor)\n",
-    "            probabilities = torch.softmax(outputs, dim=1)\n",
+    "            probabilities = model(input_tensor)  # Already softmaxed\n",
     "            confidence, pred = torch.max(probabilities, 1)\n",
     "            confidence = confidence.item()\n",
     "        \n",
@@ -230,7 +228,6 @@
     "            'confidence': confidence\n",
     "        })\n",
     "    \n",
-    "    # Display the predictions on a grid\n",
     "    plot_predictions(predictions, class_names)\n",
     "\n",
     "def plot_predictions(predictions, class_names, cols=4):\n",
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,13 +261,145 @@
     }
    ],
    "source": [
-    "model_path = \"TrainedModels/traffic_sign_cnn_V03.pth\"\n",
+    "model_path = \"TrainedModels/traffic_sign_cnn_V04_F.pth\"\n",
     "test_path = \"Dataset/Mask\"\n",
     "\n",
     "import os\n",
     "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
     "\n",
     "live_test_image(model_path, test_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import onnx\n",
+    "import onnxruntime as ort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = onnx.load(\"TrainedModels/traffic_sign_cnn_V03.onnx\")\n",
+    "onnx.checker.check_model(model)\n",
+    "\n",
+    "ort_session = ort.InferenceSession(\"TrainedModels/traffic_sign_cnn_V03.onnx\")\n",
+    "input_name = ort_session.get_inputs()[0].name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_mean = [0.48011, 0.47254, 0.52592]\n",
+    "dataset_std = [0.20765, 0.21533, 0.20043]\n",
+    "\n",
+    "class_names = [\n",
+    "    'barred_area', 'cross_walk', 'go_straight',\n",
+    "    'no_passing_zone_beginning', 'parking_zone',\n",
+    "    'priority_over', 'steep_hill_downhill',\n",
+    "    'steep_hill_uphill', 'stop', 'tunnel_beginning',\n",
+    "    'turn_left', 'turn_right'\n",
+    "]\n",
+    "\n",
+    "predcition_comment = {\n",
+    "    0: \"Barred area ahead\",\n",
+    "    1: \"Crosswalk detected\",\n",
+    "    2: \"Go straight\",\n",
+    "    3: \"No passing zone\",\n",
+    "    4: \"Parking zone\",\n",
+    "    5: \"Yield: priority over\",\n",
+    "    6: \"Steep hill downhill\",\n",
+    "    7: \"Steep hill uphill\",\n",
+    "    8: \"Stop sign\",\n",
+    "    9: \"Tunnel ahead\",\n",
+    "    10: \"Turn left\",\n",
+    "    11: \"Turn right\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_video_frame(frame):\n",
+    "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    frame_resized = cv2.resize(frame_rgb, (32, 32))\n",
+    "    frame_normalized = frame_resized.astype(np.float32) / 255.0\n",
+    "    frame_transposed = np.transpose(frame_normalized, (2, 0, 1))\n",
+    "    frame_expanded = np.expand_dims(frame_transposed, axis=0)\n",
+    "    return frame_expanded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)  # Use 0 for webcam\n",
+    "\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Preprocess the current frame\n",
+    "    processed_frame = preprocess_video_frame(frame)\n",
+    "    \n",
+    "    # Run inference with the ONNX model\n",
+    "    outputs = ort_session.run(None, {input_name: processed_frame})\n",
+    "    pred_class = np.argmax(outputs[0])\n",
+    "    \n",
+    "    # Get the predicted class name and corresponding comment\n",
+    "    predicted_class_name = class_names[pred_class]\n",
+    "    comment = predcition_comment.get(int(pred_class), \"Sign detected\")\n",
+    "    \n",
+    "    # For demonstration, draw a fixed bounding box at the center of the frame\n",
+    "    h, w, _ = frame.shape\n",
+    "    box_size = 100  # Change as needed\n",
+    "    center_x, center_y = w // 2, h // 2\n",
+    "    x1 = center_x - box_size // 2\n",
+    "    y1 = center_y - box_size // 2\n",
+    "    x2 = center_x + box_size // 2\n",
+    "    y2 = center_y + box_size // 2\n",
+    "    cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "    \n",
+    "    # Put text (predicted class and comment) above the bounding box\n",
+    "    text = f\"{predicted_class_name}: {comment}\"\n",
+    "    cv2.putText(frame, text, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "    \n",
+    "    # Display the frame with bounding box and text\n",
+    "    cv2.imshow('Traffic Sign Detection', frame)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -283,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cuda_env",
+   "display_name": "torch_env",
    "language": "python",
    "name": "python3"
   },
