--- a/frameExtracter.ipynb
+++ b/frameExtracter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = r'Dataset'\n",
+    "base_dir = r'DatasetTest/Original'\n",
     "\n",
     "y1 = 420\n",
     "y2 = 1500"
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SIZE = 416\n",
+    "SIZE = 288\n",
     "\n",
     "center_selected = False\n",
     "center_x, center_y = 0, 0\n",
@@ -342,8 +342,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_folder = r'DatasetTest/Original'\n",
-    "output_folder = r'DatasetTest/Cropped'\n",
+    "input_folder = r'DatasetTest'\n",
+    "output_folder = r'DatasetTest'\n",
     "\n",
     "process_images(input_folder, output_folder)"
    ]
@@ -357,11 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = r'Dataset'\n",
+    "base_dir = r'DatasetTest/Original'\n",
     "\n",
     "def natural_sort_key(s):\n",
     "    return [int(text) if text.isdigit() else text.lower() \n",
@@ -370,55 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Moving 'barred_area' files: 100%|██████████| 617/617 [00:00<00:00, 1436.41file/s]\n",
-      "Renaming 'barred_area': 100%|██████████| 617/617 [00:00<00:00, 2837.73file/s]\n",
-      "Moving 'cross_walk' files: 100%|██████████| 581/581 [00:00<00:00, 2421.51file/s]\n",
-      "Renaming 'cross_walk': 100%|██████████| 581/581 [00:00<00:00, 2216.00file/s]\n",
-      "Moving 'go_straight' files: 100%|██████████| 497/497 [00:00<00:00, 1811.79file/s]\n",
-      "Renaming 'go_straight': 100%|██████████| 497/497 [00:00<00:00, 1647.50file/s]\n",
-      "Moving 'no_passing_zone_beginning' files: 100%|██████████| 565/565 [00:00<00:00, 1079.47file/s]\n",
-      "Renaming 'no_passing_zone_beginning': 100%|██████████| 565/565 [00:00<00:00, 1179.46file/s]\n",
-      "Moving 'parking_zone' files: 100%|██████████| 483/483 [00:00<00:00, 2123.44file/s]\n",
-      "Renaming 'parking_zone': 100%|██████████| 483/483 [00:00<00:00, 1962.30file/s]\n",
-      "Moving 'priority_over' files: 100%|██████████| 576/576 [00:00<00:00, 1265.00file/s]\n",
-      "Renaming 'priority_over': 100%|██████████| 576/576 [00:00<00:00, 2157.86file/s]\n",
-      "Moving 'steep_hill_downhill' files: 100%|██████████| 427/427 [00:00<00:00, 1934.31file/s]\n",
-      "Renaming 'steep_hill_downhill': 100%|██████████| 427/427 [00:00<00:00, 1729.68file/s]\n",
-      "Moving 'steep_hill_uphill' files: 100%|██████████| 479/479 [00:00<00:00, 2065.50file/s]\n",
-      "Renaming 'steep_hill_uphill': 100%|██████████| 479/479 [00:00<00:00, 1129.76file/s]\n",
-      "Moving 'stop' files: 100%|██████████| 546/546 [00:00<00:00, 1161.38file/s]\n",
-      "Renaming 'stop': 100%|██████████| 546/546 [00:00<00:00, 1038.08file/s]\n",
-      "Moving 'tunnel_beginning' files: 100%|██████████| 602/602 [00:00<00:00, 1332.88file/s]\n",
-      "Renaming 'tunnel_beginning': 100%|██████████| 602/602 [00:00<00:00, 1999.34file/s]\n",
-      "Moving 'turn_left' files: 100%|██████████| 580/580 [00:00<00:00, 1319.67file/s]\n",
-      "Renaming 'turn_left': 100%|██████████| 580/580 [00:00<00:00, 1346.26file/s]\n",
-      "Moving 'turn_right' files: 100%|██████████| 555/555 [00:00<00:00, 1134.04file/s]\n",
-      "Renaming 'turn_right': 100%|██████████| 555/555 [00:00<00:00, 1030.73file/s]\n",
-      "Class Folders: 12class [00:08,  1.36class/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted_folders = sorted(\n",
     "    [f for f in os.listdir(base_dir) if os.path.isdir(os.path.join(base_dir, f))],\n",
@@ -452,7 +406,7 @@
     "        temp_files = sorted(os.listdir(temp_dir), key=natural_sort_key)\n",
     "        for frame_idx, filename in enumerate(tqdm(temp_files, desc=f\"Renaming '{folder}'\", unit=\"file\"), 1):\n",
     "            ext = os.path.splitext(filename)[1].lower()\n",
-    "            new_name = f\"{class_idx:02d}_frame_{frame_idx:05d}{ext}\"\n",
+    "            new_name = f\"{class_idx:02d}_00_{frame_idx:05d}{ext}\"    # field 01 / frame 00\n",
     "            os.rename(\n",
     "                os.path.join(temp_dir, filename),\n",
     "                os.path.join(folder_path, new_name)\n",
@@ -465,6 +419,92 @@
     "                print(f\"Could not delete '{temp_dir}', {e.strerror}\")\n",
     "\n",
     "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "from numpy import random\n",
+    "\n",
+    "base_dir = r'DatasetTest/Base'\n",
+    "val_dir = r'DatasetTest/BaseVal'\n",
+    "output_train = r'DatasetTest/Train'\n",
+    "output_test = r'DatasetTest/Test'\n",
+    "output_val = r'DatasetTest/Val'\n",
+    "\n",
+    "base_train_split = 200 \n",
+    "base_test_split = 200 \n",
+    "val_train_split = 106\n",
+    "val_test_split = 169\n",
+    "val_keep = 75 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def natural_sort_key(s):\n",
+    "    return [int(text) if text.isdigit() else text.lower() \n",
+    "            for text in re.split(r'(\\d+)', s)]\n",
+    "\n",
+    "def process_split(src_dir, dest_dir, files, copy=True):\n",
+    "    os.makedirs(dest_dir, exist_ok=True)\n",
+    "    for f in files:\n",
+    "        src = os.path.join(src_dir, f)\n",
+    "        dst = os.path.join(dest_dir, f)\n",
+    "        if copy:\n",
+    "            shutil.copy(src, dst)\n",
+    "        else:\n",
+    "            shutil.move(src, dst)\n",
+    "\n",
+    "sorted_classes = sorted(\n",
+    "    [f for f in os.listdir(base_dir) if os.path.isdir(os.path.join(base_dir, f))],\n",
+    "    key=natural_sort_key\n",
+    ")\n",
+    "\n",
+    "for class_folder in tqdm(sorted_classes, desc=\"Processing Base\"):\n",
+    "    base_class_path = os.path.join(base_dir, class_folder)\n",
+    "    val_class_path = os.path.join(val_dir, class_folder)\n",
+    "    \n",
+    "    base_images = [f for f in os.listdir(base_class_path) \n",
+    "                  if f.lower().endswith(('.jpg', '.jpeg', '.png'))]\n",
+    "    random.shuffle(base_images)\n",
+    "    \n",
+    "    base_train = base_images[:base_train_split]\n",
+    "    base_test = base_images[base_train_split:base_train_split+base_test_split]\n",
+    "    \n",
+    "    process_split(base_class_path, os.path.join(output_train, class_folder), base_train)\n",
+    "    process_split(base_class_path, os.path.join(output_test, class_folder), base_test)\n",
+    "\n",
+    "for class_folder in tqdm(sorted_classes, desc=\"Processing Val\"):\n",
+    "    val_class_path = os.path.join(val_dir, class_folder)\n",
+    "    \n",
+    "    val_images = [f for f in os.listdir(val_class_path) \n",
+    "                if f.lower().endswith(('.jpg', '.jpeg', '.png'))]\n",
+    "    random.shuffle(val_images)\n",
+    "    \n",
+    "    val_keep_split = val_images[:val_keep]\n",
+    "    val_train = val_images[val_keep:val_keep+val_train_split]\n",
+    "    val_test = val_images[val_keep+val_train_split:val_keep+val_train_split+val_test_split]\n",
+    "    \n",
+    "    process_split(val_class_path, os.path.join(output_train, class_folder), val_train)\n",
+    "    process_split(val_class_path, os.path.join(output_test, class_folder), val_test)\n",
+    "    process_split(val_class_path, os.path.join(output_val, class_folder), val_keep_split)\n",
+    "\n",
+    "print(\"Dataset splitting completed!\")"
    ]
   },
   {
